// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout resolveAbsoluteCoordinates should leave page children coordinates as they are 1`] = `
Object {
  "children": Array [
    Object {
      "box": Object {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "children": Array [
        Object {
          "box": Object {
            "height": 50,
            "left": 20,
            "top": 20,
            "width": 50,
          },
          "type": "VIEW",
        },
        Object {
          "box": Object {
            "height": 20,
            "left": 20,
            "top": 70,
            "width": 50,
          },
          "type": "VIEW",
        },
      ],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveAbsoluteCoordinates should leave page coordinates as they are 1`] = `
Object {
  "children": Array [
    Object {
      "box": Object {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "type": "PAGE",
    },
    Object {
      "box": Object {
        "height": 200,
        "left": 0,
        "top": 0,
        "width": 200,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveAbsoluteCoordinates should resolve nested children coordinates 1`] = `
Object {
  "children": Array [
    Object {
      "box": Object {
        "height": 100,
        "left": 0,
        "top": 0,
        "width": 100,
      },
      "children": Array [
        Object {
          "box": Object {
            "height": 50,
            "left": 20,
            "top": 20,
            "width": 50,
          },
          "children": Array [
            Object {
              "box": Object {
                "height": 30,
                "left": 20,
                "top": 20,
                "width": 40,
              },
              "type": "VIEW",
            },
            Object {
              "box": Object {
                "height": 10,
                "left": 40,
                "top": 40,
                "width": 10,
              },
              "type": "VIEW",
            },
          ],
          "type": "VIEW",
        },
      ],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;
